--- a/project.html
+++ b/project.html
@@ -236,8 +236,8 @@
      	},
      	isCollidng:function()
 		{	//I KNEW WHAT I AM DOING.. NOW I SEEM TO FORGET .. THANSK TO MY PURSE AND PHONE.. THEY HELPED IN DESIGNING THIS :P
-			/UPDATE COMMENTS PLSSSS/
-			/P.S NO Y PUSH BACK :P UNNOTICABLE ;)/
+			//UPDATE COMMENTS PLSSSS/
+			//P.S NO Y PUSH BACK :P UNNOTICABLE ;)/
 			var t1 =  (this.x-fighter2.x)/2; var t2 = (this.y - fighter1.y)/2;
 			if(this.dir == 1 && this.x < fighter2.x)
 			{
